# rust-rocket-ms-template

./: Cargo.toml  Rocket.toml
src/: infra.rs  main.rs  users.rs
src/infra/: db.rs
src/users/: user_commands.rs  user_controller.rs
