[package]
name = "rust-ms-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
diesel_migrations = "2.1.0"
eventbus = "0.5.1"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_postgres_pool", "postgres_pool"] }
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.103"
